--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -27,11 +27,7 @@
     />
 
     <!--owl slider stylesheet -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/owl.carousel.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./css/owl.carousel.min.css" />
 
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
@@ -82,7 +78,7 @@
                   <a class="nav-link" href="#team">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="cursor: default">
+                  <a class="nav-link no-cursor" href="#" title="Login">
                     <i class="fa fa-user" aria-hidden="true"></i>
                   </a>
                 </li>
@@ -224,7 +220,7 @@
             <div class="col-md-4">
               <div class="box">
                 <div class="img-box">
-                  <img src="./images/s1.png" />
+                  <img src="./images/s1.png" alt="Service 1 Image" />
                 </div>
                 <div class="detail-box">
                   <h5>Photo Copy</h5>
@@ -240,7 +236,7 @@
             <div class="col-md-4">
               <div class="box">
                 <div class="img-box">
-                  <img src="./images/s2.png" />
+                  <img src="./images/s2.png" alt="Service 2 Image" />
                 </div>
                 <div class="detail-box">
                   <h5>Online Works</h5>
@@ -256,7 +252,7 @@
             <div class="col-md-4">
               <div class="box">
                 <div class="img-box">
-                  <img src="./images/s3.png" />
+                  <img src="./images/s3.png" alt="Service 3 Image" />
                 </div>
                 <div class="detail-box">
                   <h5>Pen Card</h5>
@@ -336,19 +332,19 @@
                   <p>Son Of Rajesh Barpete</p>
                 </div>
                 <div class="social_box">
-                  <a href="#">
+                  <a href="#"  title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="LinkedIn">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Instagram">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="YouTube">
                     <i class="fa fa-youtube-play" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -364,19 +360,19 @@
                   <p>Marketing Head</p>
                 </div>
                 <div class="social_box">
-                  <a href="#">
+                  <a href="#"  title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="LinkedIn">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Instagram">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="YouTube">
                     <i class="fa fa-youtube-play" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -392,19 +388,19 @@
                   <p>Operater</p>
                 </div>
                 <div class="social_box">
-                  <a href="#">
+                  <a href="#"  title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="LinkedIn">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Instagram">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="YouTube">
                     <i class="fa fa-youtube-play" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -420,19 +416,19 @@
                   <p>Doughter Of Rajesh Barpete</p>
                 </div>
                 <div class="social_box">
-                  <a href="#">
+                  <a href="#"  title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="LinkedIn">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="Instagram">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
-                  <a href="#">
+                  <a href="#" title="YouTube">
                     <i class="fa fa-youtube-play" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -445,7 +441,6 @@
 
     <!-- end team section -->
 
-    
     <!-- info section -->
 
     <section class="info_section layout_padding2">
@@ -472,16 +467,16 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="" title="Facebook">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="Twitter">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="LinkedIn">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="Instagram">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
@@ -524,7 +519,7 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear" style="color: var(--body-color)"></span> All
+          <span id="displayYear"></span> All
           Rights Reserved By
           <a href="./index.html">Bhardwaj Computers</a>
         </p>
@@ -543,10 +538,7 @@
     <!-- bootstrap js -->
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <!-- owl slider -->
-    <script
-      type="text/javascript"
-      src="./js/owl.carousel.min.js"
-    ></script>
+    <script type="text/javascript" src="./js/owl.carousel.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="js/custom.js"></script>
     <!-- Google Map -->
@@ -556,4 +548,3 @@
     <script src="./js/typed.umd.js" defer></script>
   </body>
 </html>
-
