--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -78,7 +78,7 @@
                   <a class="nav-link" href="./team.html">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="cursor: default">
+                  <a class="nav-link no-cursor" href="#" title="Login">
                     <i class="fa fa-user" aria-hidden="true"></i>
                   </a>
                 </li>
@@ -90,7 +90,7 @@
       <!-- end header section -->
 
       <!-- about section -->
-      <section id="about" class="about_section layout_padding" style="background: var(--body-color);">
+      <section id="about" class="about_section layout_padding">
         <div class="container">
           <div class="heading_container heading_center">
             <h2>About <span>Us</span></h2>
@@ -131,7 +131,7 @@
 
     <!-- info section -->
 
-    <section class="info_section layout_padding2" style="border-top: 2px solid">
+    <section class="info_section layout_padding2 boborder">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 info_col">
@@ -155,16 +155,16 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
+              <a href="" title="Visit our Facebook page">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="Visit our Twitter page">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="Visit our LinkedIn page">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="" title="Visit our Instagram page">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
@@ -172,7 +172,7 @@
           <div class="col-md-6 col-lg-3 info_col">
             <div class="info_detail">
               <h4>Info</h4>
-              <p style="text-align: justify">
+              <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
                 quam quis magnam debitis iusto repudiandae.
               </p>
@@ -207,7 +207,7 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear" style="color: var(--body-color)"></span> All
+          <span id="displayYear"></span> All
           Rights Reserved By
           <a href="../index.html">Bhardwaj Computers</a>
         </p>
