--- a/index.html
+++ b/index.html
@@ -42,55 +42,57 @@
   <body>
     <div class="hero_area">
       <!-- header section starts -->
-      <header id="head123432" class="header_section">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="./index.html">
-              <span> Divyanshu </span>
-            </a>
+      <div class="head-arrangement">
+        <header id="head123432" class="header_section">
+          <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+              <a class="navbar-brand" href="./index.html">
+                <span> Divyanshu </span>
+              </a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class=""> </span>
-            </button>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class=""> </span>
+              </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#home"
-                    >Home <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#services">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#team">Team</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link no-cursor" href="#" title="Login">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </header>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#home"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#team">Team</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link no-cursor" href="#" title="Login">
+                      <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+      </div>
       <!-- end header section -->
 
       <!-- slider section -->
-      <section id="home" class="slider_section">
+      <section id="home" class="slider_section topmarg">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -332,7 +334,7 @@
                   <p>Son Of Rajesh Barpete</p>
                 </div>
                 <div class="social_box">
-                  <a href="#"  title="Facebook">
+                  <a href="#" title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
                   <a href="#" title="Twitter">
@@ -360,7 +362,7 @@
                   <p>Marketing Head</p>
                 </div>
                 <div class="social_box">
-                  <a href="#"  title="Facebook">
+                  <a href="#" title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
                   <a href="#" title="Twitter">
@@ -388,7 +390,7 @@
                   <p>Operater</p>
                 </div>
                 <div class="social_box">
-                  <a href="#"  title="Facebook">
+                  <a href="#" title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
                   <a href="#" title="Twitter">
@@ -416,7 +418,7 @@
                   <p>Doughter Of Rajesh Barpete</p>
                 </div>
                 <div class="social_box">
-                  <a href="#"  title="Facebook">
+                  <a href="#" title="Facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
                   <a href="#" title="Twitter">
@@ -519,8 +521,7 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear"></span> All
-          Rights Reserved By
+          <span id="displayYear"></span> All Rights Reserved By
           <a href="./index.html">Bhardwaj Computers</a>
         </p>
       </div>
@@ -546,5 +547,7 @@
     <!-- End Google Map -->
 
     <script src="./js/typed.umd.js" defer></script>
+
+    <div><a href="#home" class="go-to-top" title="Go to top"></a></div>
   </body>
 </html>
