--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="../css/owl.carousel.min.css" />
 
     <!-- font awesome style -->
-    <link href="../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../css/all.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
     <link href="../css/style.css" rel="stylesheet" />
@@ -42,51 +42,53 @@
   <body>
     <div class="hero_area">
       <!-- header section starts -->
-      <header id="head123432" class="header_section">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="../index.html">
-              <span> Divyanshu </span>
-            </a>
+      <div class="head-arrangement">
+        <header id="head123432" class="header_section">
+          <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+              <a class="navbar-brand" href="../index.html">
+                <span> Divyanshu </span>
+              </a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class=""> </span>
-            </button>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class=""> </span>
+              </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html"
-                    >Home <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./service.html">Services</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./team.html">Team</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link no-cursor" href="#" title="Login">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </header>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./service.html">Services</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./team.html">Team</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link no-cursor" href="../pages/admin-panel/src/signin.html" title="Login">
+                      <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+      </div>
       <!-- end header section -->
 
       <!-- about section -->
@@ -139,7 +141,7 @@
               <h4>Address</h4>
               <div class="contact_link_box">
                 <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                  <i class="fa-solid fa-location-dot"></i>
                   <span>
                     M.P. Distric: Seoni, Tehsil: Keolari, Village: Lopa;
                   </span>
@@ -155,17 +157,17 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="" title="Visit our Facebook page">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+              <a href="" title="Facebook">
+                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
               </a>
-              <a href="" title="Visit our Twitter page">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+              <a href="" title="Twitter">
+                <i class="fa-brands fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="" title="Visit our LinkedIn page">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <a href="" title="LinkedIn">
+                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
               </a>
-              <a href="" title="Visit our Instagram page">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+              <a href="" title="Instagram">
+                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -207,13 +209,16 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear"></span> All
-          Rights Reserved By
+          <span id="displayYear"></span> All Rights Reserved By
           <a href="../index.html">Bhardwaj Computers</a>
         </p>
       </div>
     </section>
     <!-- footer section -->
+
+    <a href="#" class="go-to-top" title="Go to top">
+      <i class="fa-solid fa-caret-up fa-fade"></i>
+    </a>
 
     <!-- jQery -->
     <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
@@ -233,6 +238,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
     <!-- End Google Map -->
 
+    <script src="../js/all.js"></script>
     <script src="../js/typed.umd.js" defer></script>
   </body>
 </html>
