--- a/pages/service.html
+++ b/pages/service.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="../css/owl.carousel.min.css" />
 
     <!-- font awesome style -->
-    <link href="../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../css/all.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
     <link href="../css/style.css" rel="stylesheet" />
@@ -42,55 +42,57 @@
   <body>
     <div class="hero_area">
       <!-- header section starts -->
-      <header id="head123432" class="header_section">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="../index.html">
-              <span> Divyanshu </span>
-            </a>
+      <div class="head-arrangement">
+        <header class="header_section">
+          <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container">
+              <a class="navbar-brand" href="../index.html">
+                <span> Divyanshu </span>
+              </a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class=""> </span>
-            </button>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class=""> </span>
+              </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html"
-                    >Home <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="./service.html">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./team.html">Team</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="cursor: default">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </header>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="./service.html">Services</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./team.html">Team</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link no-cursor" href="../pages/admin-panel/src/signin.html" title="Login">
+                      <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+      </div>
       <!-- end header section -->
 
       <!-- service section -->
-      <section id="services" class="service_section layout_padding">
+      <section id="services" class="service_section layout_padding bo-botom">
         <div class="service_container">
           <div class="container">
             <div class="heading_container heading_center">
@@ -104,12 +106,17 @@
               <div class="col-md-4">
                 <div class="box">
                   <div class="img-box">
-                    <img src="../images/s1.png" />
+                    <img
+                      src="../images/s1.png"
+                      alt="Description of the image"
+                    />
                   </div>
                   <div class="detail-box">
                     <h5>Photo Copy</h5>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laboriosam ratione voluptatem consequuntur alias reprehenderit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus laboriosam ratione voluptatem consequuntur alias
+                      reprehenderit.
                     </p>
                     <a href="./service.html"> Read More </a>
                   </div>
@@ -118,12 +125,17 @@
               <div class="col-md-4">
                 <div class="box">
                   <div class="img-box">
-                    <img src="../images/s2.png" />
+                    <img
+                      src="../images/s2.png"
+                      alt="Description of the image"
+                    />
                   </div>
                   <div class="detail-box">
                     <h5>Online Works</h5>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laboriosam ratione voluptatem consequuntur alias reprehenderit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus laboriosam ratione voluptatem consequuntur alias
+                      reprehenderit.
                     </p>
                     <a href="./service.html"> Read More </a>
                   </div>
@@ -132,12 +144,17 @@
               <div class="col-md-4">
                 <div class="box">
                   <div class="img-box">
-                    <img src="../images/s3.png" />
+                    <img
+                      src="../images/s3.png"
+                      alt="Description of the image"
+                    />
                   </div>
                   <div class="detail-box">
                     <h5>Pen Card</h5>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laboriosam ratione voluptatem consequuntur alias reprehenderit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus laboriosam ratione voluptatem consequuntur alias
+                      reprehenderit.
                     </p>
                     <a href="./service.html"> Read More </a>
                   </div>
@@ -155,7 +172,7 @@
 
     <!-- info section -->
 
-    <section class="info_section layout_padding2" style="border-top: 2px solid;">
+    <section class="info_section layout_padding2">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 info_col">
@@ -163,7 +180,7 @@
               <h4>Address</h4>
               <div class="contact_link_box">
                 <a href="">
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                  <i class="fa-solid fa-location-dot"></i>
                   <span>
                     M.P. Distric: Seoni, Tehsil: Keolari, Village: Lopa;
                   </span>
@@ -179,24 +196,24 @@
               </div>
             </div>
             <div class="info_social">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+              <a href="" title="Facebook">
+                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
               </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+              <a href="" title="Twitter">
+                <i class="fa-brands fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <a href="" title="LinkedIn">
+                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
               </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+              <a href="" title="Instagram">
+                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 info_col">
             <div class="info_detail">
               <h4>Info</h4>
-              <p style="text-align: justify;">
+              <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
                 quam quis magnam debitis iusto repudiandae.
               </p>
@@ -231,13 +248,17 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear" style="color: var(--body-color)"></span> All
+          <span id="displayYear"></span> All
           Rights Reserved By
           <a href="../index.html">Bhardwaj Computers</a>
         </p>
       </div>
     </section>
     <!-- footer section -->
+
+    <a href="#" class="go-to-top" title="Go to top">
+      <i class="fa-solid fa-caret-up fa-fade"></i>
+    </a>
 
     <!-- jQery -->
     <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
@@ -250,10 +271,7 @@
     <!-- bootstrap js -->
     <script type="text/javascript" src="../js/bootstrap.js"></script>
     <!-- owl slider -->
-    <script
-      type="text/javascript"
-      src="../js/owl.carousel.min.js"
-    ></script>
+    <script type="text/javascript" src="../js/owl.carousel.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="../js/custom.js"></script>
     <!-- Google Map -->
@@ -261,5 +279,6 @@
     <!-- End Google Map -->
 
     <script src="../js/typed.umd.js" defer></script>
+    <script src="../js/all.js"></script>
   </body>
 </html>
