--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <header class="header_section">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="./index.html">
-              <span> Divyanshu </span>
+            <a class="navbar-brand pointer" href="./index.html">
+              <span><i class="fa-solid fa-web-awesome "></i> Divyanshu </span>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
