--- a/pages/team.html
+++ b/pages/team.html
@@ -46,8 +46,8 @@
         <header id="head123432" class="header_section">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container">
-              <a class="navbar-brand" href="../index.html">
-                <span> Divyanshu </span>
+              <a class="navbar-brand pointer" href="../index.html">
+                <span><i class="fa-solid fa-web-awesome "></i> Divyanshu </span>
               </a>
 
               <button
