--- a/pages/admin-panel/src/profile.html
+++ b/pages/admin-panel/src/profile.html
@@ -74,7 +74,7 @@
                       <h4
                         class="mb-2 text-lg font-semibold text-center text-gray-800 dark:text-white/90 xl:text-left"
                       >
-                        Musharof Chowdhury
+                        Divyanshu Barpete
                       </h4>
                       <div
                         class="flex flex-col items-center gap-1 text-center xl:flex-row xl:gap-3 xl:text-left"
@@ -86,7 +86,7 @@
                           class="hidden h-3.5 w-px bg-gray-300 dark:bg-gray-700 xl:block"
                         ></div>
                         <p class="text-sm text-gray-500 dark:text-gray-400">
-                          Arizona, United States
+                          Lopa, India
                         </p>
                       </div>
                     </div>
@@ -216,7 +216,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          Musharof
+                          Divyanshu
                         </p>
                       </div>
 
@@ -229,7 +229,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          Chowdhury
+                          Barpete
                         </p>
                       </div>
 
@@ -242,7 +242,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          randomuser@pimjo.com
+                        rajeshbarpete11@gmail.com
                         </p>
                       </div>
 
@@ -255,7 +255,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          +09 363 398 46
+                          +91 9755 169 120
                         </p>
                       </div>
 
@@ -322,7 +322,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          United States
+                          India
                         </p>
                       </div>
 
@@ -335,7 +335,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          Arizona, United States
+                          Seoni,Lopa
                         </p>
                       </div>
 
@@ -343,12 +343,12 @@
                         <p
                           class="mb-2 text-xs leading-normal text-gray-500 dark:text-gray-400"
                         >
-                          Postal Code
+                          Pin Code
                         </p>
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          ERT 2489
+                          480991
                         </p>
                       </div>
 
