--- a/pages/admin-panel/src/signup.html
+++ b/pages/admin-panel/src/signup.html
@@ -314,10 +314,10 @@
             <include src="./partials/common-grid-shape.html"></include>
             <div class="flex flex-col items-center max-w-xs">
               <a href="index.html" class="block mb-4">
-                <img src="./images/logo/auth-logo.svg" alt="Logo" />
+                <img src="./images/logo/logo-light.png" alt="Logo" />
               </a>
               <p class="text-center text-gray-400 dark:text-white/60">
-                Free and Open-Source Tailwind CSS Admin Dashboard Template
+                WelCome To Divyanshu Dashboard Sign Up Have a nice day to you
               </p>
             </div>
           </div>
