--- a/pages/admin-panel/src/signin.html
+++ b/pages/admin-panel/src/signin.html
@@ -246,11 +246,11 @@
                     </div>
                     <!-- Button -->
                     <div>
-                      <button
-                        class="flex items-center justify-center w-full px-4 py-3 text-sm font-medium text-white transition rounded-lg bg-brand-500 shadow-theme-xs hover:bg-brand-600"
+                      <a
+                        class="flex items-center justify-center w-full px-4 py-3 text-sm font-medium text-white transition rounded-lg bg-brand-500 shadow-theme-xs hover:bg-brand-600" href="./index.html"
                       >
-                        Sign In
-                      </button>
+                        Login
+                    </a>
                     </div>
                   </div>
                 </form>
@@ -279,10 +279,10 @@
             <include src="./partials/common-grid-shape.html"></include>
             <div class="flex flex-col items-center max-w-xs">
               <a href="index.html" class="block mb-4">
-                <img src="./images/logo/auth-logo.svg" alt="Logo" />
+                <img src="./images/logo/logo-light.png" alt="Logo" />
               </a>
               <p class="text-center text-gray-400 dark:text-white/60">
-                Free and Open-Source Tailwind CSS Admin Dashboard Template
+                WelCome To Divyanshu Dashboard Login Have a nice day to you
               </p>
             </div>
           </div>
