--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container">
               <a class="navbar-brand pointer" href="../index.html">
-                <span><i class="fa-solid fa-web-awesome "></i> Divyanshu </span>
+                <span><i class="fa-solid fa-web-awesome"></i> Divyanshu </span>
               </a>
 
               <button
@@ -79,7 +79,11 @@
                     <a class="nav-link" href="./team.html">Team</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:3000/signin.html" title="Login">
+                    <a
+                      class="nav-link"
+                      href="http://localhost:3000/signin.html"
+                      title="Login"
+                    >
                       <i class="fa fa-user" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -122,7 +126,9 @@
                   Consequuntur nesciunt tempora aliquid porro recusandae
                   sapiente ipsum error hic iste voluptas.
                 </p>
-                <a href="./about.html"> View All </a>
+                <div class="btn-box">
+                  <a href="./about.html"> View All </a>
+                </div>
               </div>
             </div>
           </div>
@@ -133,7 +139,7 @@
 
     <!-- info section -->
 
-    <section class="info_section layout_padding2 boborder">
+    <section id="info" class="info_section layout_padding2">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 info_col">
@@ -184,10 +190,10 @@
             <div class="info_link_box">
               <h4>Links</h4>
               <div class="info_links">
-                <a class="" href="../index.html"> Home </a>
-                <a class="active" href="./service.html"> Services </a>
-                <a class="" href="./about.html"> About </a>
-                <a class="" href="./team.html"> Team </a>
+                <a class="active" href="../index.html"> Home </a>
+                <a class="" href="../pages/about.html"> About </a>
+                <a class="" href="../pages/service.html"> Services </a>
+                <a class="" href="../pages/team.html"> Team </a>
               </div>
             </div>
           </div>
@@ -195,7 +201,9 @@
             <h4>Contact Us</h4>
             <form action="../index.html">
               <input type="text" placeholder="Enter email" />
-              <button type="submit">Contact</button>
+              <div type="submit" class="btn-box">
+                <a href="#info">Contact</a>
+              </div>
             </form>
           </div>
         </div>
