--- a/pages/team.html
+++ b/pages/team.html
@@ -231,9 +231,7 @@
             </div>
           </div>
           <div class="btn-box">
-            <a href="./pages/team.html">
-               Show More 
-            </a>
+            <a href="./team.html"> Show More </a>
           </div>
         </div>
       </section>
@@ -242,7 +240,7 @@
 
     <!-- info section -->
 
-    <section class="info_section layout_padding2">
+    <section id="info" class="info_section layout_padding2">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 info_col">
@@ -293,10 +291,10 @@
             <div class="info_link_box">
               <h4>Links</h4>
               <div class="info_links">
-                <a class="" href="../index.html"> Home </a>
-                <a class="" href="./service.html"> Services </a>
-                <a class="" href="./about.html"> About </a>
-                <a class="active" href="./team.html"> Team </a>
+                <a class="active" href="../index.html"> Home </a>
+                <a class="" href="../pages/about.html"> About </a>
+                <a class="" href="../pages/service.html"> Services </a>
+                <a class="" href="../pages/team.html"> Team </a>
               </div>
             </div>
           </div>
@@ -304,7 +302,9 @@
             <h4>Contact Us</h4>
             <form action="../index.html">
               <input type="text" placeholder="Enter email" />
-              <button type="submit">Contact</button>
+              <div type="submit" class="btn-box">
+                <a href="#info">Contact</a>
+              </div>
             </form>
           </div>
         </div>
