--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
   <!-- info section -->
 
-  <section id="footer" class="info_section layout_padding2">
+  <section id="info" class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 info_col">
@@ -496,7 +496,7 @@
           <h4>Contact Us</h4>
           <form action="./index.html">
             <input type="text" placeholder="Enter email" />
-            <div type="submit" class="btn-box"><a href="#footer">Contact</a></div>
+            <div type="submit" class="btn-box"><a href="#info">Contact</a></div>
           </form>
         </div>
       </div>
